# DualSense2Serial

./: CMakeLists.txt  CMakePresets.json  README.md  imgui.ini
config/: dualsense2serial.json
include/: App.hpp  Config.hpp  ControllerInput.hpp  SerialPort.hpp
src/: App.cpp  Config.cpp  ControllerInput.cpp  SerialPort.cpp  main.cpp
